--- a/css/assignmetns.css
+++ b/css/assignmetns.css
@@ -113,7 +113,7 @@ footer {
 
 @media only screen and (max-device-width: 414px) {
   nav {
-    width: 100px;
+    width: 65%;
   }
   .sidepanel  {
     width: 0;
@@ -150,12 +150,13 @@ footer {
   }
   
   .openbtn {
-    font-size: 20px;
+    font-size: 30px;
     cursor: pointer;
     background-color: #111;
     color: white;
     padding: 0;
-    margin-left: 170px;
+    float: right;
+    margin: 0;
     border: none;
     display: block;
   }
