--- a/css/grades.css
+++ b/css/grades.css
@@ -75,7 +75,7 @@
 
 @media only screen and (max-device-width: 414px) {
   nav {
-    width: 100px;
+    width: 65%;
   }
   .sidepanel  {
     width: 0;
@@ -112,12 +112,13 @@
   }
   
   .openbtn {
-    font-size: 20px;
+    font-size: 30px;
     cursor: pointer;
     background-color: #111;
     color: white;
     padding: 0;
-    margin-left: 170px;
+    float: right;
+    margin: 0;
     border: none;
     display: block;
   }
