--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ time {
 
 @media only screen and (max-device-width: 414px) {
   nav {
-    width: 100px;
+    width: 65%;
   }
   .sidepanel  {
     width: 0;
@@ -103,12 +103,13 @@ time {
   }
   
   .openbtn {
-    font-size: 20px;
+    font-size: 30px;
     cursor: pointer;
     background-color: #111;
     color: white;
     padding: 0;
-    margin-left: 170px;
+    float: right;
+    margin: 0;
     border: none;
     display: block;
   }
