--- a/css/style.css
+++ b/css/style.css
@@ -85,14 +85,14 @@ time {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    color: #999999;
     display: block;
     transition: 0.3s;
     float: none;
   }
   
   .sidepanel a:hover {
-    color: #f1f1f1;
+    color: white;
   }
   
   .sidepanel .closebtn {
@@ -113,10 +113,17 @@ time {
     border: none;
     display: block;
   }
+  .openbtn:hover {
+    transform: rotate(90deg);
+    transition: transform 0.4s;
+  }
   .closebtn {
     margin-top: 18px;
   }
-  
+  .closebtn:hover {
+    transform: rotate(90deg);
+    transition: transform 1s;
+  }
   .openbtn:hover {
     background-color:#444;
   }
