--- a/css/about.css
+++ b/css/about.css
@@ -103,7 +103,7 @@
       padding: 8px 8px 8px 32px;
       text-decoration: none;
       font-size: 25px;
-      color: #818181;
+      color: #999999;
       display: block;
       transition: 0.3s;
       float: none;
@@ -130,6 +130,14 @@
       margin: 0;
       border: none;
       display: block;
+    }
+    .openbtn:hover {
+      transform: rotate(90deg);
+      transition: transform 0.4s;
+    }
+    .closebtn:hover {
+      transform: rotate(90deg);
+      transition: transform 1s;
     }
     .closebtn {
       margin-top: 18px;
