--- a/css/assignmetns.css
+++ b/css/assignmetns.css
@@ -132,7 +132,7 @@ footer {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    color: #999999;
     display: block;
     transition: 0.3s;
     float: none;
@@ -159,6 +159,14 @@ footer {
     margin: 0;
     border: none;
     display: block;
+  }
+  .openbtn:hover {
+    transform: rotate(90deg);
+    transition: transform 0.4s;
+  }
+  .closebtn:hover {
+    transform: rotate(90deg);
+    transition: transform 1s;
   }
   .closebtn {
     margin-top: 18px;
