--- a/css/about.css
+++ b/css/about.css
@@ -123,7 +123,7 @@
     .openbtn {
       font-size: 30px;
       cursor: pointer;
-      background-color: black;
+      background-color: #1111;
       color: white;
       padding: 0;
       float: right;
