--- a/css/contact.css
+++ b/css/contact.css
@@ -128,7 +128,7 @@
     position: absolute;
     top: 0;
     right: 25px;
-    font-size: 36px;
+    font-size: 27px;
   }
   
   .openbtn {
@@ -157,6 +157,9 @@
   .openbtn:hover {
     background-color:#444;
   }
+  .active {
+    background-color: #998317cf;
+   }
   .icons a {
     padding: 80px;
   }
