--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ time {
     position: absolute;
     top: 0;
     right: 25px;
-    font-size: 36px;
+    font-size: 27px;
   }
   
   .openbtn {
@@ -125,7 +125,10 @@ time {
     transition: transform 1s;
   }
   .openbtn:hover {
-    background-color:#444;
+    background-color:#1111;
+  }
+  .active {
+   background-color: #998317cf;
   }
   .icons a {
     padding: 80px;
