--- a/css/about.css
+++ b/css/about.css
@@ -117,7 +117,7 @@
       position: absolute;
       top: 0;
       right: 25px;
-      font-size: 36px;
+      font-size: 27px;
     }
     
     .openbtn {
@@ -145,6 +145,9 @@
     .openbtn:hover {
       background-color:#444;
     }
+    .active {
+      background-color: #998317cf;
+     }
     .profili {
       margin: 40px 0 0 0;
       padding: 0;
