--- a/css/assignmetns.css
+++ b/css/assignmetns.css
@@ -146,7 +146,7 @@ footer {
     position: absolute;
     top: 0;
     right: 25px;
-    font-size: 36px;
+    font-size: 27px;
   }
   
   .openbtn {
@@ -174,6 +174,9 @@ footer {
   .openbtn:hover {
     background-color:#444;
   }
+  .active {
+    background-color: #998317cf;
+   }
   .dropdown {
     padding-left: 0;
   }
