--- a/css/assignmetns.css
+++ b/css/assignmetns.css
@@ -111,7 +111,7 @@ footer {
 
 /* Responsive Line */
 
-@media only screen and (max-device-width: 414px) {
+@media only screen and (max-device-width: 1024px) {
   nav {
     width: 65%;
   }
@@ -187,4 +187,17 @@ footer {
     height: 230px;
   }
 
+}
+
+@media (min-device-width: 1024px) {
+  nav {
+    width: 90%;
+    margin-left: 0;
+    padding-left: 10%;
+  }
+  .icons {
+    margin: 0;
+    
+  }
+  
 }
