--- a/css/grades.css
+++ b/css/grades.css
@@ -1,152 +1,165 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
-  body {
-    font-family: system-ui;
-    background: black;
-  }
-  header {
-    height: 100px;
-  }
-  img {
-    padding: 14px;
-  }
-  nav {
-    width: 1233px;
-    margin-left: 99px;
-    margin-top: -70px;
-    margin-right: 2px;
-    padding-top: 10px;
-  }
-  .sidepanel a {
-    list-style-type: none;
-    padding: 15px 16px;
-    font-size: 20px;
-    color: #f5c701;
-    float: right;
-    border-radius: 10px;
-  }
-  .sidepanel a {
-    text-decoration: none;
-  }
-  .sidepanel:hover {
-    background-color: #b7ad80b8;
-  }
-  .active {
-    background-color: #7c744db8;
-  }
-  .sec1 {
-    height: 700px;
-  }
-  .mainh {
-    text-align: center;
-    color: #f5c701;
-    padding-top: 50px;
-    padding-bottom: 65px;
-  }
-  table,tr,td {
-    color: white;
-    border: 1px solid #f5c701;
-  }
-  td {
-    padding: 20px;
-  }
-  footer {
-    height: 200px;
-    padding-top: 5%;
-    text-align: center;
-    background: #f5c701;
-  }
-  .icons {
-    padding-top: 35px;
-  }
-  .icons a{
-    padding: 35px;
-    color: black;
-    font-size: 18px;
-  }
-  .openbtn,
-  .closebtn {
-    display: none;
-  }
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: system-ui;
+  background: black;
+}
+header {
+  height: 100px;
+}
+img {
+  padding: 14px;
+}
+nav {
+  width: 1233px;
+  margin-left: 99px;
+  margin-top: -70px;
+  margin-right: 2px;
+  padding-top: 10px;
+}
+.sidepanel a {
+  list-style-type: none;
+  padding: 15px 16px;
+  font-size: 20px;
+  color: #f5c701;
+  float: right;
+  border-radius: 10px;
+}
+.sidepanel a {
+  text-decoration: none;
+}
+.sidepanel:hover {
+  background-color: #b7ad80b8;
+}
+.active {
+  background-color: #7c744db8;
+}
+.sec1 {
+  height: 700px;
+}
+.mainh {
+  text-align: center;
+  color: #f5c701;
+  padding-top: 50px;
+  padding-bottom: 65px;
+}
+table,tr,td {
+  color: white;
+  border: 1px solid #f5c701;
+}
+td {
+  padding: 20px;
+}
+footer {
+  height: 200px;
+  padding-top: 5%;
+  text-align: center;
+  background: #f5c701;
+}
+.icons {
+  padding-top: 35px;
+}
+.icons a{
+  padding: 35px;
+  color: black;
+  font-size: 18px;
+}
+.openbtn,
+.closebtn {
+  display: none;
+}
 
-  /* Responsive Line */
+/* Responsive Line */
 
-@media only screen and (max-device-width: 414px) {
-  nav {
-    width: 65%;
-  }
-  .sidepanel  {
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    height: 250px;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-  }
+@media only screen and (max-device-width: 1024px) {
+nav {
+  width: 65%;
+}
+.sidepanel  {
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  height: 250px;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidepanel a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #999999;
+  display: block;
+  transition: 0.3s;
+  float: none;
+}
+
+.sidepanel a:hover {
+  color: #f1f1f1;
+}
+
+.sidepanel .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 27px;
+}
+
+.openbtn {
+  font-size: 30px;
+  cursor: pointer;
+  background-color: #1111;
+  color: white;
+  padding: 0;
+  float: right;
+  margin: 0;
+  border: none;
+  display: block;
+}
+.openbtn:hover {
+  transform: rotate(90deg);
+  transition: transform 0.4s;
+}
+.closebtn:hover {
+  transform: rotate(90deg);
+  transition: transform 1s;
+}
+.closebtn {
+  margin-top: 18px;
+}
+
+.openbtn:hover {
+  background-color:#444;
+}
+.active {
+  background-color: #998317cf;
+ }
+.sec1 {
+  height: 780px;
+}
+.icons a {
+  padding: 80px;
+}
+footer {
+  height: 260px;
+}
+}
+
+@media (min-device-width: 1024px) {
+nav {
+  width: 90%;
+  margin-left: 0;
+  padding-left: 10%;
+}
+.icons {
+  margin: 0;
   
-  .sidepanel a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #999999;
-    display: block;
-    transition: 0.3s;
-    float: none;
-  }
-  
-  .sidepanel a:hover {
-    color: #f1f1f1;
-  }
-  
-  .sidepanel .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 27px;
-  }
-  
-  .openbtn {
-    font-size: 30px;
-    cursor: pointer;
-    background-color: #1111;
-    color: white;
-    padding: 0;
-    float: right;
-    margin: 0;
-    border: none;
-    display: block;
-  }
-  .openbtn:hover {
-    transform: rotate(90deg);
-    transition: transform 0.4s;
-  }
-  .closebtn:hover {
-    transform: rotate(90deg);
-    transition: transform 1s;
-  }
-  .closebtn {
-    margin-top: 18px;
-  }
-  
-  .openbtn:hover {
-    background-color:#444;
-  }
-  .active {
-    background-color: #998317cf;
-   }
-  .sec1 {
-    height: 780px;
-  }
-  .icons a {
-    padding: 80px;
-  }
-  footer {
-    height: 260px;
-  }
+}
+
 }
