--- a/css/assignmetns.css
+++ b/css/assignmetns.css
@@ -99,7 +99,7 @@ footer {
 .icons {
   padding-top: 35px;
 }
-.icons a{
+.icons a {
   padding: 35px;
   color: black;
   font-size: 18px;
@@ -115,7 +115,7 @@ footer {
   nav {
     width: 65%;
   }
-  .sidepanel  {
+  .sidepanel {
     width: 0;
     position: fixed;
     z-index: 1;
@@ -127,28 +127,30 @@ footer {
     transition: 0.5s;
     padding-top: 60px;
   }
-  
+  .sidepanel:hover {
+    background-color: #000000;
+  }
   .sidepanel a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #999999;
+    color: #bfbfbf;
     display: block;
     transition: 0.3s;
     float: none;
   }
-  
+
   .sidepanel a:hover {
     color: #f1f1f1;
   }
-  
+
   .sidepanel .closebtn {
     position: absolute;
     top: 0;
     right: 25px;
     font-size: 27px;
   }
-  
+
   .openbtn {
     font-size: 30px;
     cursor: pointer;
@@ -172,11 +174,11 @@ footer {
     margin-top: 18px;
   }
   .openbtn:hover {
-    background-color:#444;
+    background-color: #444;
   }
   .active {
     background-color: #998317cf;
-   }
+  }
   .dropdown {
     padding-left: 0;
   }
@@ -186,7 +188,6 @@ footer {
   footer {
     height: 230px;
   }
-
 }
 
 @media (min-device-width: 1024px) {
@@ -197,7 +198,5 @@ footer {
   }
   .icons {
     margin: 0;
-    
   }
-  
 }
