--- a/css/about.css
+++ b/css/about.css
@@ -10,7 +10,7 @@ header {
   height: 100px;
 }
 .logo {
-  padding: 14px;
+  padding: 30px;
 }
 nav {
   width: 1233px;
@@ -90,8 +90,13 @@ footer {
 /* Responsive Line */
 
 @media only screen and (max-device-width: 1024px) {
+  .logo {
+    float: left;
+  }
   nav {
     width: 65%;
+    margin: 0;
+    padding: 0;
   }
   .sidepanel {
     width: 0;
@@ -138,7 +143,7 @@ footer {
     color: white;
     padding: 0;
     float: right;
-    margin: 0;
+    margin: 16.5% -30% 0 0;
     border: none;
     display: block;
   }
@@ -188,7 +193,7 @@ footer {
     height: 230px;
   }
 }
-@media (min-device-width: 1024px) {
+@media (min-device-width: 1025px) {
   nav {
     width: 90%;
     margin-left: 0;
