--- a/css/assignmetns.css
+++ b/css/assignmetns.css
@@ -9,8 +9,8 @@ body {
 header {
   height: 100px;
 }
-img {
-  padding: 14px;
+.logo {
+  padding: 30px;
 }
 nav {
   width: 1233px;
@@ -112,8 +112,13 @@ footer {
 /* Responsive Line */
 
 @media only screen and (max-device-width: 1024px) {
+  .logo {
+    float: left;
+  }
   nav {
     width: 65%;
+    margin: 0;
+    padding: 0;
   }
   .sidepanel {
     width: 0;
@@ -158,7 +163,7 @@ footer {
     color: white;
     padding: 0;
     float: right;
-    margin: 0;
+    margin: 16.5% -30% 0 0;
     border: none;
     display: block;
   }
@@ -190,7 +195,7 @@ footer {
   }
 }
 
-@media (min-device-width: 1024px) {
+@media (min-device-width: 1025px) {
   nav {
     width: 90%;
     margin-left: 0;
