--- a/css/contact.css
+++ b/css/contact.css
@@ -73,12 +73,12 @@ footer {
   background: #f5c701;
 }
 .icons {
-  padding-top: 35px;
+  padding-top: 4%;
 }
 .icons a {
-  padding: 35px;
+  padding: 3%;
   color: black;
-  font-size: 18px;
+  font-size: 1.1em;
 }
 .openbtn,
 .closebtn {
@@ -163,7 +163,9 @@ footer {
     background-color: #998317cf;
   }
   .icons a {
-    padding: 80px;
+    padding: 1.5%;
+    display: grid;
+    text-decoration: none;
   }
   footer {
     height: 260px;
