--- a/css/grades.css
+++ b/css/grades.css
@@ -61,12 +61,12 @@ footer {
   background: #f5c701;
 }
 .icons {
-  padding-top: 35px;
+  padding-top: 4%;
 }
 .icons a {
-  padding: 35px;
+  padding: 3%;
   color: black;
-  font-size: 18px;
+  font-size: 1.1em;
 }
 .openbtn,
 .closebtn {
@@ -154,7 +154,9 @@ footer {
     height: 780px;
   }
   .icons a {
-    padding: 80px;
+    padding: 1.5%;
+    display: grid;
+    text-decoration: none;
   }
   footer {
     height: 260px;
