--- a/css/style.css
+++ b/css/style.css
@@ -47,12 +47,12 @@ footer {
   background: #f5c701;
 }
 .icons {
-  padding-top: 35px;
+  padding-top: 4%;
 }
 .icons a {
-  padding: 35px;
+  padding: 3%;
   color: black;
-  font-size: 18px;
+  font-size: 1.1em;
 }
 time {
   color: #f5c701b0;
@@ -136,8 +136,13 @@ time {
   .active {
    background-color: #998317cf;
   }
+  .sec1 {
+    height: 470px;
+  }
   .icons a {
-    padding: 80px;
+    padding: 1.5%;
+    display: grid;
+    text-decoration: none;
   }
   footer {
     height: 260px;
