--- a/css/about.css
+++ b/css/about.css
@@ -75,12 +75,12 @@ footer {
   background: #f5c701;
 }
 .icons {
-  padding-top: 35px;
+  padding-top: 4%;
 }
 .icons a {
-  padding: 35px;
+  padding: 3%;
   color: black;
-  font-size: 18px;
+  font-size: 1.1em;
 }
 .openbtn,
 .closebtn {
@@ -187,7 +187,9 @@ footer {
     height: 900px;
   }
   .icons a {
-    padding: 80px;
+    padding: 1.5%;
+    display: grid;
+    text-decoration: none;
   }
   footer {
     height: 230px;
