--- a/css/assignmetns.css
+++ b/css/assignmetns.css
@@ -54,6 +54,7 @@ nav {
   font-size: 16px;
   border: none;
   cursor: pointer;
+  border-radius: 10px;
 }
 
 .dropdown {
@@ -95,6 +96,7 @@ footer {
   padding-top: 5%;
   text-align: center;
   background: #f5c701;
+  border-radius: 20px 20px 0 0;
 }
 .icons {
   padding-top: 4%;
