--- a/css/grades.css
+++ b/css/grades.css
@@ -59,6 +59,7 @@ footer {
   padding-top: 5%;
   text-align: center;
   background: #f5c701;
+  border-radius: 20px 20px 0 0;
 }
 .icons {
   padding-top: 4%;
