--- a/css/assignmetns.css
+++ b/css/assignmetns.css
@@ -45,7 +45,9 @@ nav {
   padding-top: 50px;
 }
 .butonat {
-  padding-left: 50px;
+  width: 45%;
+  margin: 0;
+  float: left;
 }
 .dropbtn {
   background-color: #4c4c4c;
@@ -91,6 +93,22 @@ nav {
 .dropdown:hover .dropbtn {
   background-color: #2e2e2e;
 }
+.h3 {
+  background-image: url("C:/Users/Lirim/Documents/GitHub/mainproject/Images/program.jpeg");
+  background-size: cover; 
+  width: 50%; 
+  height: 370px;
+  color: #f5c701e6;
+  float: right;
+  padding: 4% 0 0 0;
+  margin: 0 0 0 0;
+}
+h3 {
+  text-align: center;
+  padding: 22% 0 0 0;
+  font-family: 'Architects Daughter', cursive;
+  font-size: 1.7em;
+}
 footer {
   height: 200px;
   padding-top: 5%;
@@ -109,6 +127,89 @@ footer {
 .openbtn,
 .closebtn {
   display: none;
+}
+
+/* Progress Bar */
+.container {
+  margin: 60px auto;
+  width: 30%;
+  text-align: center;
+}
+
+.container .progress {
+  margin: 0 auto;
+  width: 100%;
+}
+
+.progress {
+  padding: 4px;
+  background: rgba(0, 0, 0, 0.25);
+  border-radius: 6px;
+  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25), 0 1px rgba(255, 255, 255, 0.08);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25), 0 1px rgba(255, 255, 255, 0.08);
+}
+
+.progress-bar {
+  height: 16px;
+  border-radius: 4px;
+	background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
+  background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
+  background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
+  -webkit-transition: 0.4s linear;
+  -moz-transition: 0.4s linear;
+  -o-transition: 0.4s linear;
+  transition: 0.4s linear;
+  -webkit-transition-property: width, background-color;
+  -moz-transition-property: width, background-color;
+  -o-transition-property: width, background-color;
+  transition-property: width, background-color;
+  -webkit-box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.25), inset 0 1px rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.25), inset 0 1px rgba(255, 255, 255, 0.1);
+}
+
+#five:checked ~ .progress > .progress-bar {
+  width: 5%;
+  background-color: #f63a0f;
+}
+
+#twentyfive:checked ~ .progress > .progress-bar {
+  width: 25%;
+  background-color: #f27011;
+}
+
+#fifty:checked ~ .progress > .progress-bar {
+  width: 50%;
+  background-color: #f2b01e;
+}
+
+#seventyfive:checked ~ .progress > .progress-bar {
+  width: 75%;
+  background-color: #f2d31b;
+}
+
+#onehundred:checked ~ .progress > .progress-bar {
+  width: 100%;
+  background-color: #86e01e;
+}
+
+.radio {
+  display: none;
+}
+
+.label {
+  display: inline-block;
+  margin: 0 5px 20px;
+  padding: 3px 8px;
+  color: #aaa;
+  text-shadow: 0 1px black;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.radio:checked + .label {
+  color: white;
+  background: rgba(0, 0, 0, 0.25);
 }
 
 /* Responsive Line */
@@ -187,10 +288,34 @@ footer {
     background-color: #998317cf;
   }
   .sec1 {
-    height: 660px;
+    height: 770px;
   }
   .dropdown {
     padding-left: 0;
+  }
+  .dropbtn {
+    padding: 9px;
+  }
+  .butonat {
+    float: none;
+    width: 100%;
+    height: 13em;
+  }
+  .h3 {
+    background-image: url("C:/Users/Lirim/Documents/GitHub/mainproject/Images/program.jpeg");
+    background-size: cover; 
+    width: 100%; 
+    height: 150%;
+    color: #f5c701e6;
+    float: none;
+    margin: 0 0 0 0;
+    padding: 4% 0 18% 0;
+  }
+  h3 {
+    text-align: center;
+    padding: 22% 0 0 0;
+    font-family: 'Architects Daughter', cursive;
+    font-size: 1.4em;
   }
   .icons a {
     padding: 1.5%;
@@ -200,6 +325,16 @@ footer {
   footer {
     height: 260px;
   }
+
+  /* progress bar */
+.container {
+  width: 70%;
+  font-size: 1.1em;
+}
+.label {
+  margin: 0;
+  padding: 0;
+}
 }
 
 @media (min-device-width: 1025px) {
