--- a/css/assignmetns.css
+++ b/css/assignmetns.css
@@ -94,7 +94,7 @@ nav {
   background-color: #2e2e2e;
 }
 .h3 {
-  background-image: url("C:/Users/Lirim/Documents/GitHub/mainproject/Images/program.jpeg");
+  background-image: url("C:/Users/Lirim/Documents/GitHub/mainproject/Images/program.jpg");
   background-size: cover; 
   width: 50%; 
   height: 370px;
@@ -302,7 +302,7 @@ footer {
     height: 13em;
   }
   .h3 {
-    background-image: url("C:/Users/Lirim/Documents/GitHub/mainproject/Images/program.jpeg");
+    background-image: url("C:/Users/Lirim/Documents/GitHub/mainproject/Images/program.jpg");
     background-size: cover; 
     width: 100%; 
     height: 150%;
