--- a/css/assignmetns.css
+++ b/css/assignmetns.css
@@ -302,7 +302,7 @@ footer {
     height: 13em;
   }
   .h3 {
-    background-image: url("C:/Users/Lirim/Documents/GitHub/mainproject/Images/program.jpg");
+    background-image: url("../Images/program.jpg");
     background-size: cover; 
     width: 100%; 
     height: 150%;
