--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,17 @@ body {
   font-family: system-ui;
   background: black;
 }
+#myVideo {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
+}
 header {
   height: 100px;
 }
