--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ nav {
 .sidepanel:hover {
   background-color: #b7ad80b8;
 }
+.sidepanel a:hover {
+  opacity: 0.7;
+}
 .active {
   background-color: #7c744db8;
 }
@@ -66,6 +69,9 @@ footer {
   padding: 3%;
   color: black;
   font-size: 1.1em;
+}
+.icons a:hover {
+  opacity: 0.9;
 }
 time {
   color: #f5c701b0;
