--- a/css/contact.css
+++ b/css/contact.css
@@ -84,6 +84,22 @@ textarea {
   background-color: #f5c701;
   width: 150px;
   border: 0;
+  font-weight: 600;
+  cursor: pointer;
+  transform: scale(1);
+  transition: 300ms;
+}
+.submit:disabled {
+  pointer-events: none;
+}
+.submit:hover {
+  box-shadow: #f5c701 0 1px 13px;
+  transition: 260ms;
+  transform: translateY(-2px);
+}
+.submit:active {
+  box-shadow: none;
+  transform: translateY(0);
 }
 footer {
   height: 200px;
@@ -99,9 +115,18 @@ footer {
   padding: 3%;
   color: black;
   font-size: 1.1em;
+  text-shadow: #615a00 -2px 4px 5px;
 }
 .icons a:hover {
   opacity: 0.9;
+}
+a:hover .fa{
+  transition: 500ms;
+  transform: scale(1.2);
+}
+a .fa{
+  transition: 600ms;
+  transform: scale(1);
 }
 .openbtn,
 .closebtn {
