--- a/css/grades.css
+++ b/css/grades.css
@@ -20,8 +20,43 @@ body {
 header {
   height: 100px;
 }
-.logo {
-  padding: 30px;
+.img-div{
+  padding: 1.3%;
+}
+.img-wrapper{
+  max-width: 90px;
+  position: relative;
+}
+.img-wrapper img{
+  width: 100%;
+  height: 1%;
+  display: block;
+  border-radius: 50%;
+}
+.img-wrapper::before{
+  content: "";
+  position: absolute;
+  inset: -15px;
+  border: 6px solid rgba(0, 0, 0, 0);
+  border-top-color: #fff;
+  border-left-color: rgba(255, 0, 0, 0);
+  border-right-color: rgba(255, 0, 0, 0);
+  border-bottom-color: #ababab;
+  border-radius: 50%;
+  transition: 800ms;
+  z-index: -1;
+  animation-name: spin;
+  animation-duration: 7000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; 
+}
+@keyframes spin {
+  from {
+      transform:rotate(0deg);
+  }
+  to {
+      transform:rotate(360deg);
+  }
 }
 nav {
   width: 1233px;
@@ -82,9 +117,18 @@ footer {
   padding: 3%;
   color: black;
   font-size: 1.1em;
+  text-shadow: #615a00 -2px 4px 5px;
 }
 .icons a:hover {
   opacity: 0.9;
+}
+a:hover .fa{
+  transition: 500ms;
+  transform: scale(1.2);
+}
+a .fa{
+  transition: 600ms;
+  transform: scale(1);
 }
 .openbtn,
 .closebtn {
@@ -94,8 +138,14 @@ footer {
 /* Responsive Line */
 
 @media only screen and (max-device-width: 1024px) {
-  .logo {
-    float: left;
+  .img-div{
+    padding: 4%;
+    width: 50%;
+  }
+  .img-wrapper{
+    max-width: 60px;
+    
+    position: relative;
   }
   nav {
     width: 65%;
@@ -146,7 +196,7 @@ footer {
     color: white;
     padding: 0;
     float: right;
-    margin: 16.5% -30% 0 0;
+    margin: -14% -30% 0 0;
     border: none;
     display: block;
   }
