--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ footer {
   padding: 3%;
   color: black;
   font-size: 1.1em;
-  text-shadow: #615a00 -2px 4px 5px;
+  text-shadow: #a38400 -2px 4px 5px;
 }
 .icons a:hover {
   opacity: 0.9;
